# cargo-apk

./: Cargo.toml  README.md
.github/workflows/: android_test.sh  publish.yml  rust.yml
cargo-apk/: CHANGELOG.md  Cargo.toml  README.md
cargo-apk/src/: apk.rs  main.rs  manifest.rs
examples/: Cargo.toml  Carold.toml
examples/hello_world/: Cargo.toml
examples/jni_audio/: Cargo.toml
examples/looper/: Cargo.toml
ndk-build/: CHANGELOG.md  Cargo.toml  README.md
ndk-build/src/: apk.rs  error.rs  manifest.rs  ndk.rs
ndk-examples/: Cargo.toml
